[gd_scene load_steps=2 format=3 uid="uid://coachhiring789"]

[ext_resource type="Script" path="res://scripts/ui/CoachHiringScreen.gd" id="1_script"]

[node name="CoachHiringScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
text = "< Back"

[node name="TitleLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hire Head Coach"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="PanelContainer" parent="VBoxContainer/HBox"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/HBox/LeftPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBox/LeftPanel/VBox"]
layout_mode = 2
text = "Available Coaches"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBox/LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CoachList" type="VBoxContainer" parent="VBoxContainer/HBox/LeftPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanel" type="PanelContainer" parent="VBoxContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/HBox/RightPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBox/RightPanel/VBox"]
layout_mode = 2
text = "Select a coach..."
horizontal_alignment = 1

[node name="CompatibilityLabel" type="Label" parent="VBoxContainer/HBox/RightPanel/VBox"]
layout_mode = 2
text = "Compatibility: --"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBox/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailText" type="Label" parent="VBoxContainer/HBox/RightPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Details will appear here..."
autowrap_mode = 3

[node name="HireButton" type="Button" parent="VBoxContainer/HBox/RightPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "HIRE"

[connection signal="pressed" from="VBoxContainer/Header/BackButton" to="." method="_on_back_button_pressed"]
